# libfuzzerfication

./: .gitattributes  CNAME  CONTRIBUTING.md  GETTING-RESULTS.md  GETTING-STARTED.md  README.md  circle.yml  docker-compose.yml  getting-results.md  index.html  notes.txt  params.json  protecode-sc-top-components-20160609.txt  protecode-sc-top-components-native-20160609.txt
base/libfuzzer-base/: Dockerfile  README.md  fuzz.sh
base/libfuzzer-base-haskell/: Dockerfile  README.md  cabal.config  dotemacs
base/libfuzzer-base-haskell/hs-libfuzzer/: libfuzzer.cabal
base/libfuzzer-base-haskell/hs-libfuzzer/src/: Libfuzzer.hs
doc/: git-lfs-note.md  meeting-20160715.md  mikkoyli-libfuzzerfication-updates-2016-07-04.md  mikkoyli-libfuzzerfication-updates-2016-07-05.md  notes-20160621.txt  oherrala-fuzzing-beyond-c.md  presentation-mikkoyli-libfuzzerfication-20160823.md  presentation-stub-writing.md  screencast.md  stub_writing.md
doc/screencast/: screencast-plan.txt
doc/tellus-20160621/: notes-20160621.md
docker/: README.md  commands  docker-compose.yml  tmp_libxml2_fuzzing_dev.txt
docker/imagemagick/: Dockerfile
docker/libav/: libav_fuzzer.c
docker/libfuzzer-base/: docker-compose.yml
docker/libfuzzer-base-haskell/: README.md
docker/libxml2/: libxml2_fuzzer.cc
docker/stubs/: README.md
dockerfiles/: base.sh  commands  docker-compose.yml  libav.sh  run.sh  run_all.sh
dockerfiles/ImageMagick/: Dockerfile  build.sh  fuzz.sh
dockerfiles/base-clang/: Dockerfile  build_clang.sh  env
pictures/: circle.yml
stubs/: README.md
web/: README.md
(+156 files in other folders)
