name:                libfuzzer
version:             0.1.0.0
synopsis:            Libfuzzer utils to help with fuzzing
description:         Please see README.md
homepage:            https://github.com/ouspg/libfuzzerfication/
license:             MIT
license-file:        LICENSE
maintainer:          https://github.com/ouspg/libfuzzerfication/
copyright:           2016 OUSPG
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Libfuzzer
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , byteable
                     , bytestring
                     , cryptohash
                     , directory
                     , memory
